fix(backend): sonar issue A "NullPointerException" could be thrown; "getRootCause()" can return null